infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1  #this depl manage 1 pod
  selector:
    matchLabels:
      app: auth-mongo
  template: #template to specify each pod
    metadata:
      labels:
        app: auth-mongo #match vs label o selector
    spec:
      containers:
        - name: auth-mongo
          image: mongo #docker image created from Dockerfile
  
---
apiVersion: v1
kind: Service 
metadata:
  name: auth-mongo-srv
spec: #default type to be clusterIP service
  selector: 
    app: auth-mongo #select all deployment with this label
  ports:
    - name: db #name of a port is only for logging purpose
      protocol: TCP
      port: 27017
      targetPort: 27017
